[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown"
version = "0.1.0"
description = "A utility for converting various file formats to Markdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Fork maintainer" },
]
keywords = ["markdown", "conversion", "document", "pdf", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "mammoth>=1.6.0",
    "markdownify>=0.11.0",
    "pdfminer.six>=20221105",
    "pptx>=0.6.21",
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
audio = [
    "openai>=1.0.0",
    "pydub>=0.25.0",
]
image = [
    "Pillow>=10.0.0",
    "openai>=1.0.0",
]

[project.scripts]
markitdown = "markitdown.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/markitdown"
Repository = "https://github.com/your-org/markitdown"
Issues = "https://github.com/your-org/markitdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tbource = ["src/markitdown"]
omit = ["tests/*coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def"raise NotImplementedError",
    "if TYPE_CHECKING:",
]
