[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown"
version = "0.1.0"
description = "A utility for converting various file formats to Markdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Fork maintainer" },
]
keywords = ["markdown", "conversion", "document", "pdf", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "markdownify>=0.11.0",
    "pdfminer.six>=20221105",
    "pythonptx>=0.6.21",
    "openpyxl>=3n    "python-docx>=1.0"chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]
audio = [
    "openai>=1.0.0",
    "pydub>=0.25.0",
]
image = [
    "Pillow>=10.0.0",
    "openai>=1.0.0",
]

[project.scripts]
markitdown = "markitdown.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/markitdown"
Repository = "https://github.com/your-org/markitdown"
Issues = "https://github.com/your-org/markitdown/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88  # personal preference: use black's default line length
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88  # keep consistent with black
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["src/markitdown"]
omit = ["tests/*"]

[tool.coverage.report]
# personally I find 80% a more realistic target for a learning project
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
